--- a/todolist-front/angular.json
+++ b/todolist-front/angular.json
@@ -23,12 +23,12 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
-            "scripts": [
-              "src/app/home/sb-admin.js",
-              "src/app/home/sb-admin.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -75,7 +75,11 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [],
             "assets": [
